# ai-contract-analyzer

./: .gitignore  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_WORKFLOW.md  CONFLICT_ANALYSIS_CURRENT_STATE.md  CONFLICT_DETECTION_CURRENT_STATE.md  DEPLOYMENT_SUMMARY.md  DOCFORMER_PRIVACY_SECURITY.md  DYNAMIC_COMPARISON_GUIDE.md  ENHANCED_EXTRACTION_README.md  EXECUTIVE_SUMMARY.md  EXTENDED_TESTING_FEATURES.md  IMPLEMENTATION_SUMMARY.md  N_TO_N_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PHASE_1_2_FINAL_TEST_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMPROVEMENTS.md  PRODUCTION_READY.md  QUICK_START_N_TO_N.md  README.md  REFINEMENT_IMPLEMENTATION_SUMMARY.md  REFINEMENT_QUICK_REFERENCE.md  SELF_CHECK_FEATURE_SUMMARY.md  TABLE_EXTRACTION_IMPLEMENTATION.md  TECHNICAL_REVIEW_AND_CLEANUP.md  TEMPORARY_COMPARISON_FEATURE.md  TESTING_GUIDE_APPROACH_C.md  UPDATE_SUMMARY_DEC31.md  cleanup.sh  clear_all_data.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_30_clauses.py  test_3_clauses.py  test_all_vs_all.sh  test_comparison_endpoint.sh  test_extraction.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml  test_extraction_results.json  test_results_enhanced.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  0e180067cb32_add_bilingual_clause_fields.py  2ca11903efb8_add_parsed_text_to_contract_version.py  4bb127237fc6_create_contract_schema.py  5f4c4b6c8a57_add_claims_table_for_structured_.py  add_analysis_fields_to_clause.py  add_bilingual_separate_fields.py  create_upload_extraction_schema.py  de7df9643256_add_hierarchy_fields_to_clauses.py  fd06d29886f0_make_explanation_nullable.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py  (+1 more)
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/crud/: __init__.py  clause.py  contract.py
backend/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/models/: __init__.py  clause.py  conflict.py  contract.py  contract_version.py  party.py
backend/app/schemas/: __init__.py  clause.py  conflict.py  contract.py  party.py  upload.py
backend/app/services/: accurate_conflict_detector.py  advanced_extractors.py  clause_classifier.py  clause_extractor.py  clause_filters.py  clause_validation.py  clause_validator.py  conflict_detector.py  contracts.py  docformer_extractor.py  document_parser.py  fast_accurate_detector.py  hierarchical_clause_extractor.py  improved_clause_extractor.py  llm_service.py  ocr_service.py  party_identifier.py  strict_conflict_detector.py  table_extractor.py
backend/app/tasks/: __init__.py  celery_app.py  clause_extraction.py  conflict_analysis.py
backend/app/utils/: file_helpers.py  text_processing.py  validators.py
backend/docs/: clause_extraction_enhancement.md  false_positive_fixes.md
backend/scripts/: format-python.sh  lint-python.sh
backend/tests/: conftest.py  test_approach_c_pipeline.py  test_clause_filtering.py  test_conflict_detection_refined.py  test_enhanced_extraction.py  test_false_positive_fixes.py
backend/tests/test_api/: test_health.py
(+93 files in other folders)
