[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-backend"
version = "0.1.0"
description = "FastAPI backend for the Contract Review System."
authors = [
  { name = "AI Contract Analyzer" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "celery>=5.3",
  "redis>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.26",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

